testcases/error-cases/string-interpolation-error-01/error.txt
error[E0014]: unexpected end of file
 --> input.canon:1:10
  |
1 | val name = "Test";
  |          ^
2 | val message = `Hello, ${name}!;
3 |
  |
  = note: extraneous input '=' expecting {<EOF>, '#schema', 'schema', 'struct', 'union', 'type', 'use', ANNOTATION, IDENTIFIER}
